fix: Fix checkout

--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,15 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <!--<script
+    src="https://checkout.stripe.com/checkout.js"
+    class="stripe-button"
+    data-key="pk_test_51N2SbQEtQOTCGnHqvPOMo5SXFzqunmx0kf66STRTtrHitkYLH8eZgqZfXqr9J93SXjvMOPGrDaaS6rEpWjM6eu9V00C1S91xdW"
+
+    data-name="T-shirt"
+    data-description="Comfortable cotton t-shirt"
+    data-amount="500"
+    data-currency="usd">
+  </script>-->
 </body>
 </html>
